chore(build): upgrade to JDK 25, drop --enable-preview; fix quote/env ordering
JDK 25 finalizes unnamed classes — no preview flag needed.
Replaced java --enable-preview --source 21 with java --source 25 across flake.nix
and BuildWeb subprocess invocations. Dev shell bumped to jdk25.

Also fix ConvertAndSplit: move quoteToBlockquote before ]-stripping to prevent
blockquote closing brackets from being removed; fix off-by-one in
removeFigureTable paren depth counter.
Co-Authored-By: Claude Sonnet 4.6 <noreply@antrophic.com>